# StatsPAI

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  MIGRATION.md  README.md  README_CN.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: build-wheels.yml  ci-cd.yml  citation-audit.yml
StatsPAI_full_data_analysis_skill/: SKILL.md
docs/: agent_cards_spec.md  cookbook.md  faq.md  getting-started.md  index.md  joss_reviewer_guide.md  joss_validation_dossier.md  stats.md
docs/guides/: agent_api.md  agent_native_workflow.md  causal_text_family.md  choosing_iv_estimator.md  exporting-regression-tables.md  gpu_acceleration.md  migration-from-r.md  mixtape_ch09_did.md  replication_workflow.md  sp_dml_vs_doubleml.md  stability.md  synth.md
docs/reference/: decomposition.md  iv.md  panel.md  rd.md  synth.md
docs/rfc/: import_time_optimization.md  vcov_consolidation.md
docs/superpowers/specs/: 2026-04-21-p1-agent-native-frontier-design.md  2026-04-27-htz-clubsandwich-parity-design.md
examples/: README.md  card_iv.py  did_mpdta.py  rd_lee.py  synth_prop99.py
schemas/: agent_cards.json  functions.json  index.json  result.schema.json  tools.json
scripts/: agent_card_coverage.py  dump_schemas.py  error_taxonomy_audit.py  gen_api_ref.py  help_coverage.py  quality_gate.py  result_protocol_audit.py  stability_audit.py
src/statspai/: CITATION.cff  __init__.py  __init__.pyi  _agent_cards_extra.py  _article_aliases.py  _causal_family_seeds.py  _citation.py  _schema_export.py  registry.py
src/statspai/agent/: _enrichment.py  auto_tools.py  mcp_server.py  workflow_tools.py
src/statspai/causal_llm/: sampling_client.py
src/statspai/conformal_causal/: counterfactual.py
src/statspai/core/: _numba_kernels.py  base.py  results.py  utils.py
src/statspai/datasets/: _canonical.py
src/statspai/diagnostics/: rddensity.py
src/statspai/did/: callaway_santanna.py  did_imputation.py  gardner_2s.py  honest_did.py  stacked_did.py
src/statspai/dml/: __init__.py  _diagnostics.py  panel_dml.py
src/statspai/dtr/: __init__.py
src/statspai/forest/: forest_inference.py
src/statspai/frontier/: panel.py
src/statspai/gmm/: arellano_bond.py
src/statspai/inference/: wild_subcluster.py
src/statspai/matching/: __init__.py  overlap_weights.py  ps_diagnostics.py
src/statspai/neural_causal/: __init__.py  cevae.py  exports.py  models.py  plots.py
src/statspai/ope/: __init__.py
src/statspai/output/: regression_table.py
src/statspai/panel/: _hdfe_kernels.py  hdfe.py  interactive_fe.py  panel_diagnostics.py  panel_reg.py
src/statspai/plots/: __init__.py
src/statspai/rd/: rdrobust.py
src/statspai/regression/: __init__.py  _optim_helpers.py  count.py  multinomial.py  ols.py  quantile.py  tobit.py
src/statspai/schemas/: agent_cards.json  tools.json
src/statspai/smart/: replicate.py
src/statspai/surrogate/: index.py
src/statspai/synth/: __init__.py  augsynth.py  cluster.py  compare.py  exports.py  fdid.py  gsynth.py  multi_outcome.py  plots.py  report.py  scm.py  sdid.py
src/statspai/timeseries/: arima.py  local_projections.py  var.py
src/statspai/workflow/: causal_workflow.py
tests/: test_agent_card_coverage.py  test_agent_docs.py  test_agent_native_contract.py  test_agent_schema.py  test_api_stable_evidence.py  test_arima.py  test_audit_citations.py  test_augsynth_backend.py  test_citations.py  test_count_panel_nbreg.py  test_cs_report_smoke.py  test_did_numerical_fixtures.py  test_egen_rows.py  test_enrichment_citations.py  test_error_taxonomy_audit.py  test_gmm.py  test_gsynth_backend.py  test_help_completeness.py  test_honest_did_backend.py  test_import_budget.py  test_inference_jackknife.py  test_jss_formal_compliance.py  test_jss_manuscript_artifacts.py  test_jss_release_manifest.py  test_jss_reproduction_environment.py  test_jss_validation_api.py  test_limitations_consistency.py  test_local_projections.py  test_matching.py  test_mcp_interpret_result.py  test_neural_causal_exports.py  test_overlap_and_cbps.py  test_parity_harness_contract.py  test_parity_runtime.py  test_rddensity_io.py  test_regtable_from_dict.py  test_replicate_dual_track.py  test_result_protocol_audit.py  test_sampling_llm_loop.py  test_schema_export.py  (+7 more)
tests/agent_eval/: test_did_workflow_transcript.py
tests/coverage_monte_carlo/: FINDINGS.md  run_b1000.py
tests/coverage_monte_carlo/results_b1000/: coverage_b1000.json
tests/orig_parity/: 05_lee_original.R  05_lee_original.py
tests/orig_parity/data/: 05_lee_original.csv
tests/orig_parity/results/: 05_lee_original_R.json  05_lee_original_py.json  parity_table_orig.md
tests/perf/: compare_perf.py
tests/perf/results/: 05_feols_jax_bootstrap_cpu_jax.json  perf_table.tex
tests/r_parity/: 07_scm.py  09_rddensity.py  12_sdid.py  13_causal_forest.R  13_causal_forest.py  18_augsynth.py  19_gsynth.py  21_honest_relmags.py  34_lp.py  36_mediation.py  37_ppmlhdfe.R  37_ppmlhdfe.py  38_drdid.R  38_drdid.py  39_arima.R  39_arima.py  40_qreg.R  40_qreg.py  41_tobit.R  41_tobit.py  42_nbreg.R  42_nbreg.py  43_heckman.R  43_heckman.py  44_mlogit.R  44_mlogit.py  45_ologit.R  45_ologit.py  46_clogit.R  46_clogit.py  47_ppmlhdfe_3fe.R  47_ppmlhdfe_3fe.py  48_probit.R  48_probit.py  49_oprobit.R  49_oprobit.py  50_xtabond.R  50_xtabond.py  51_newey.R  51_newey.py  (+4 more)
tests/r_parity/data/: 13_causal_forest.csv  37_ppmlhdfe.csv  38_drdid.csv  39_arima.csv  40_qreg.csv  41_tobit.csv  42_nbreg.csv  43_heckman.csv  44_mlogit.csv  45_ologit.csv  46_clogit.csv  47_ppmlhdfe_3fe.csv  48_probit.csv  49_oprobit.csv  50_xtabond.csv  51_newey.csv
tests/reference_parity/: test_causal_forest_aipw_recovery.py  test_grf_parity.py
tests/stata_parity/: 23_evalue.do  24_coxph.do  26_glmm_logit.do  27_glmm_aghq.do  29_panel_sfa.do  33_var.do  34_lp.do  35_panel.do  36_mediation.do  37_ppmlhdfe.do  39_arima.do  40_qreg.do  41_tobit.do  42_nbreg.do  43_heckman.do  44_mlogit.do  45_ologit.do  46_clogit.do  47_ppmlhdfe_3fe.do  48_probit.do  49_oprobit.do  51_newey.do  README.md
tools/: audit_citations.py
(+85 files in other folders)
